--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,8 @@
-body {
-    background-color: red;
+.calculator {
+    margin-top: 50px;
+}
+
+.screen {
+    text-align: right;
+    padding: 10px;
 }
